 * Fix: Take user's permissions into account for image / document counts on the admin dashboard (Sage Abdullah)
 * Fix: Avoid N+1 queries in users index view (Tidiane Dia)
 * Fix: Use a theme-agnostic color token for read-only panels support in dark mode (Thibaud Colas)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Docs: Update color customisations guidance to include theme-agnostic options (Thibaud Colas)
 * Docs: Mark LTS releases in release note page titles (Thiago C. S. Tioma)
 * Docs: Revise main Getting started tutorial for clarity (Kevin Chung (kev-odin))
 * Docs: Revamp the start of the getting started section, with separate quick install page (Damilola Oladele)
 * Docs: Move the tutorial’s snippets section to come before tags (Damilola Oladele)
 * Docs: Rewrite the getting started tutorial to address identified friction points (Damilola Oladele)
 * Docs: Switch the Getting started tutorial’s snippets example to be more understandable (Damilola Oladele)
 * Docs: Update the deployment documentation page and remove outdated information (Jake Howard)
 * Docs: Add more items to performance page regarding pre-fetching images and frontend caching (Jake Howard)
 * Maintenance: Removed support for Python 3.7 (Dan Braghis)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 * Maintenance: Optimise use of `specific` on Task and TaskState (Matt Westcott)