@@ -119,6 +119,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Take user's permissions into account for image / document counts on the admin dashboard (Sage Abdullah)
  * Avoid N+1 queries in users index view (Tidiane Dia)
  * Use a theme-agnostic color token for read-only panels support in dark mode (Thibaud Colas)
+ * Ensure collapsible StreamBlocks expand as necessary to show validation errors (Storm Heg)
 
 ### Documentation
 
